Fixed Text Alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 
